# comfyui-storyboard

./: .gitignore  .prettierrc.json  LICENSE  README.md  __build__.py  __build_esbuild__.py  __init__.py  esbuild.config.mjs  package-lock.json  package.json  prestartup_script.py  pyproject.toml  requirements.txt  tsconfig.json
nodes/: markdown_renderer.py
py/: llm_api.py  log.py  markdown_renderer.py  pyproject.py
py/nodes/: field_inspector.py  llm_api.py  markdown_renderer.py  node_inspector.py
src_web/comfyui/: common.ts  llm_api.ts  markdown_renderer.ts  markdown_utils.ts  markdown_widget.ts  storyboard.scss  storyboard.ts
src_web/comfyui/nodes/: base_node.ts
src_web/comfyui/nodes/field-inspector/: field_inspector.ts
src_web/comfyui/nodes/llm-api/: llm_api.ts
src_web/comfyui/nodes/markdown-renderer/: markdown_renderer.ts  markdown_utils.ts  markdown_widget.ts
src_web/comfyui/nodes/node-inspector/: node_inspector.ts
src_web/comfyui/styles/: storyboard.scss
src_web/common/: comfyui_shim_pnginfo.ts  constants.ts  shared_utils.ts  utils_templates.ts
src_web/typings/: index.d.ts
web/: markdown_renderer.js  styles.js
web/comfyui/: a11y-dark.min.css  base_node.js  common.js  llm_api.js  markdown_renderer.js  markdown_utils.js  markdown_widget.js  storyboard.css  storyboard.js
web/comfyui/nodes/: base_node.js
web/comfyui/nodes/field-inspector/: field_inspector.js
web/comfyui/nodes/llm-api/: llm_api.js
web/comfyui/styles/: a11y-dark.min.css  storyboard.css
web/common/: comfyui_shim_pnginfo.js
(+4 files in other folders)
