[project]
name = "storyboard"
description = "A ComfyUI node set for creating and managing visual storyboards. Includes nodes for markdown rendering, image composition, and storyboard sequence management."
version = "1.0.8"
license = {file = "LICENSE"}
dependencies = ["markdown2", "python-dotenv", "openai"]

[project.urls]
Repository = "https://github.com/laubsauger/comfyui-storyboard"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "laub"
DisplayName = "comfyui-storyboard"
Icon = "https://raw.githubusercontent.com/laubsauger/comfyui-storyboard/refs/heads/main/web/storyboard_icon_opt.png"
